8092093: Modularization support for JavaFX
Initial JavaFX integration for JEP 200, JEP 260, and JEP 261

Co-authored-by: Chien Yang <chien.yang@oracle.com>
Co-authored-by: Danno Ferrin <danno.ferrin@oracle.com>
Co-authored-by: Chris Bensen <chris.bensen@oracle.com>
Co-authored-by: Dmitry Cherepanov <dmitry.cherepanov@oracle.com>
Co-authored-by: David Hill <david.hill@oracle.com>
Co-authored-by: Vadim Pakhnushev <vadim.pakhnushev@oracle.com>
Reviewed-by: ddhill, vadim, cbensen